--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -17,23 +17,43 @@
 }
 
 .box7 {
+  position: relative;
   grid-area: box7;
   background-color: black;
 }
-
 .box8 {
   position:relative;
   max-width:100%;
     background-color: black;
   grid-area: box8;
 }
+.eyes{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  animation: eyes .3s infinite;
+}
 
+@keyframes eyes {
+  0%{opacity:100%;}
+  50%{opacity:0%;}
+  100%{opacity:100%;}
+}
 .t1{
   position: absolute;
   font-family:Pomidor;
   font-size: 6vw;
   top:8vw;
   left: 1vw;
+  animation: t1 .3s infinite;
+}
+@keyframes t1 {
+  0% {top:8vw; left: 1vw;}
+  25% {top:6vw; left: 1vw;}
+  50% {top:8vw; left: 1vw;}
+  75% {top:10vw; left: 1vw;}
+  90% {top:8vw; left: 1vw;}
 }
 .box9 {
   display: relative;
@@ -42,6 +62,8 @@
   max-width:100%;
   grid-area: box9;
   background-color: black;
+  /* overflow: hidden;
+  white-space: nowrap; */
 }
 
 .box10 {
@@ -207,11 +229,18 @@
       object-fit: cover;
    }
    .im7{
+     position:absolute;
      width: 100%;
       height: 100%;
-      display: inline-block;
 
-      animation: im7;
+
+      animation: im7 3s linear infinite;
+   }
+
+   @keyframes im7 {
+    0% {left:0vw;}
+    50%{left:10vw;}
+    100% {left:0vw;}
    }
    .im8{
      position: relative;
@@ -230,6 +259,13 @@
      height: %;
       display: inline-block;
       object-fit: cover;
+      animation:im9 .3s infinite;
+   }
+
+   @keyframes im9 {
+     0%{opacity:100%;}
+     50%{opacity:0%;}
+     100%{opacity:100%;}
    }
    .im10{
       width: 100%;
