--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,10 +2,7 @@
 
 .box2 {
       position:relative;
-       display: grid;
-      align-items: center; */
-      /* justify-content: space-around; */
-      height: 100%;
+      height: 65vw;
       background-color: black;
    }
  .container2 {
@@ -20,16 +17,43 @@
 }
 
 .box7 {
+  position: relative;
   grid-area: box7;
   background-color: black;
 }
 .box8 {
   position:relative;
-  align-items: center;
-  justify-content: space-around;
   max-width:100%;
     background-color: black;
   grid-area: box8;
+}
+.eyes{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  animation: eyes .3s infinite;
+}
+
+@keyframes eyes {
+  0%{opacity:100%;}
+  50%{opacity:0%;}
+  100%{opacity:100%;}
+}
+.t1{
+  position: absolute;
+  font-family:Pomidor;
+  font-size: 6vw;
+  top:8vw;
+  left: 1vw;
+  animation: t1 .3s infinite;
+}
+@keyframes t1 {
+  0% {top:8vw; left: 1vw;}
+  25% {top:6vw; left: 1vw;}
+  50% {top:8vw; left: 1vw;}
+  75% {top:10vw; left: 1vw;}
+  90% {top:8vw; left: 1vw;}
 }
 .box9 {
   display: relative;
@@ -38,6 +62,8 @@
   max-width:100%;
   grid-area: box9;
   background-color: black;
+  /* overflow: hidden;
+  white-space: nowrap; */
 }
 
 .box10 {
@@ -46,6 +72,7 @@
    grid-area: box10;
    background: url('../images/Group 208.svg');
    background-color: black;
+   background-size: cover;
 
  }
  .container3 {
@@ -89,6 +116,7 @@
      grid-area: box13;
      background: url('../images/Group 208.svg');
      background-color: black;
+     background-size: cover;
   }
 
   .box14 {
@@ -124,6 +152,7 @@
      grid-area: box16;
      overflow: hidden;
      white-space: nowrap;
+     background-size: cover;
    }
    .container6 {
      position: relative;
@@ -135,11 +164,20 @@
        ".";
    }
    .im1{
-     width: 100%;
-      height: 100%;
-      display: inline-block;
-      vertical-align: top;
-      object-fit: cover;
+     position: absolute;
+     left:20vw;
+     top:8vw;
+     width: 60vw;
+     height: 50vw;
+     animation: im1 1s linear infinite;
+   }
+
+   @keyframes im1 {
+     0% {left:20vw; width: 60vw; height: 50vw;}
+     30% {left:0vw; width: 60vw; height: 50vw;}
+     60% {left:20vw; width: 60vw; height: 50vw;}
+     80%{left:40vw; width: 60vw; height: 50vw;}
+     100% {left:20vw; width: 60vw; height: 50vw;}
    }
    .im2{
       width: 70%;
@@ -191,11 +229,18 @@
       object-fit: cover;
    }
    .im7{
+     position:absolute;
      width: 100%;
       height: 100%;
-      display: inline-block;
 
-      animation: im7;
+
+      animation: im7 3s linear infinite;
+   }
+
+   @keyframes im7 {
+    0% {left:0vw;}
+    50%{left:10vw;}
+    100% {left:0vw;}
    }
    .im8{
      position: relative;
@@ -214,6 +259,13 @@
      height: %;
       display: inline-block;
       object-fit: cover;
+      animation:im9 .3s infinite;
+   }
+
+   @keyframes im9 {
+     0%{opacity:100%;}
+     50%{opacity:0%;}
+     100%{opacity:100%;}
    }
    .im10{
       width: 100%;
