--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,4 +1,5 @@
- @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+@media only screen and (min-device-width: 316px) and (max-device-width: 480px) and (orientation: portrait) {
+  /* iPhone Portrait */
 .h1{
   font-size: 144px;
 }
@@ -6,12 +7,11 @@
   height: 64.9vw;
 }
 .container2 {  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 3fr 3.5fr;
+  grid-template-rows: 0.5fr 0.5fr ;
   grid-template-areas:
-    "box2 box2"
-    "box7 box7"
-    "box10 box8";
+    "box7 box7 box7"
+    "box9 box10 box8";
 }
 
 .box2 {
@@ -29,3 +29,42 @@ height: 85.026vw;
 .box8 {
 height: 85.026vw;
   grid-area: box8; }
+.im9{
+  height: 85.026vw;
+}
+.im8{
+  height: 85.026vw;
+}
+.eyes{
+  height: 35.026vw;
+}
+
+@keyframes eyes {
+  0%{opacity:100%;}
+  50%{opacity:0%;}
+  100%{opacity:100%;}
+}
+@keyframes t1 {
+  0% {top:6vw; left: 1vw;}
+  25% {top:4vw; left: 1vw;}
+  50% {top:6vw; left: 1vw;}
+  75% {top:8vw; left: 1vw;}
+  90% {top:6vw; left: 1vw;}
+}
+  .im9{
+    width: 10vw;
+
+     display: inline-block;
+     object-fit: cover;
+     animation:im9 .3s infinite;
+  }
+  .t1{
+    font-size: 7vw;
+  }
+  @keyframes im9 {
+    0%{opacity:100%;}
+    50%{opacity:0%;}
+    100%{opacity:100%;}
+  }
+}
+}
