--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -51,6 +51,7 @@ height: 85.026vw;
 }
 .t3{
   font-size:6vw;
+  top:8vw;
 }
 @keyframes eyes {
   0%{opacity:100%;}
@@ -111,4 +112,414 @@ height: 85.026vw;
     }
   }
 }
+}
+.container3 {
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr 1fr  ;
+  grid-template-rows: 1fr  ;
+  grid-template-areas:
+    "box11 box11 box11 box12 box12 "
+    "box11 box11 box11 box12 box12 "
+    "box11 box11 box11 box12 box12 ";
+}
+
+
+.box11 {
+  align-items: center;
+  justify-content: space-around;
+height: 60vw;
+   grid-area: box11;
+ }
+ .box12 {
+   align-items: center;
+   height: 60vw;
+   justify-content: space-around;
+    grid-area: box12;
+  }
+  .im11{
+    height: 60vw;
+  }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .box2 {
+        position:relative;
+        height: 65vw;
+        background-color: black;
+     }
+   .container2 {
+    display: grid;
+    position: relative;
+    grid-template-columns: 1fr 3fr 1fr 1fr;
+    grid-auto-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+      "box7 box7 box7 box7 box8 box8"
+      "box9 box10 box10 box10 box8 box8"
+      "box9 box10 box10 box10 box8 box8";
+  }
+
+  .box7 {
+    position: relative;
+    grid-area: box7;
+    background-color: black;
+  }
+  .box8 {
+    position:relative;
+    max-width:100%;
+      background-color: black;
+    grid-area: box8;
+  }
+  .eyes{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    animation: eyes .3s infinite;
+  }
+
+  @keyframes eyes {
+    0%{opacity:100%;}
+    50%{opacity:0%;}
+    100%{opacity:100%;}
+  }
+  .t1{
+    position: absolute;
+    font-family:Pomidor;
+    font-size: 6vw;
+    top:8vw;
+    left: 1vw;
+    animation: t1 .3s infinite;
+  }
+  @keyframes t1 {
+    0% {top:8vw; left: 1vw;}
+    25% {top:6vw; left: 1vw;}
+    50% {top:8vw; left: 1vw;}
+    75% {top:10vw; left: 1vw;}
+    90% {top:8vw; left: 1vw;}
+  }
+  .t2{
+    position: absolute;
+    font-family:Pomidor;
+    font-size: 4vw;
+    top:14vw;
+    left: 62vw;
+
+  }
+  .box9 {
+    display: relative;
+    align-items: center;
+    justify-content: space-around;
+    max-width:100%;
+    grid-area: box9;
+    background-color: black;
+    /* overflow: hidden;
+    white-space: nowrap; */
+  }
+
+  .box10 {
+    position: relative;
+    max-width:100%;
+     grid-area: box10;
+     background: url('../images/Group 208.svg');
+     background-color: black;
+     background-size: cover;
+
+   }
+   .container3 {
+     display: grid;
+     position: relative;
+     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+     grid-template-rows: 1fr 1fr 1fr;
+     grid-template-areas:
+       "box11 box11 box11 box12 box12 box12 box12"
+       "box11 box11 box11 box12 box12 box12 box12"
+       "box11 box11 box11 box12 box12 box12 box12";
+   }
+
+
+   .box11 {
+     align-items: center;
+     justify-content: space-around;
+     width:100%;
+      grid-area: box11;
+    }
+    .box12 {
+      align-items: center;
+      justify-content: space-around;
+      max-width:100%;
+       grid-area: box12;
+     }
+    .container4 {
+      display: grid;
+      position: relative;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+      grid-template-rows: 1fr 1fr  ;
+
+      grid-template-areas:
+        "box13 box13 box13 box14 box14"
+        "box13 box13 box13 box14 box14";
+    }
+
+    .box13  {
+      max-width:100%;
+      position: relative;
+       grid-area: box13;
+       background: url('../images/Group 208.svg');
+       background-color: black;
+       background-size: cover;
+    }
+
+    .box14 {
+      width:100%;
+
+      align-items: center;
+       grid-area: box14;
+       background-color: black;
+     }
+     .container5 {
+       display: grid;
+       position: relative;
+       grid-template-columns: 1fr 1fr 1fr 1fr ;
+       grid-template-rows: 1fr  1fr ;
+       grid-template-areas:
+         "box15 box15 box16 box16"
+         "box15 box15 box16 box16";
+     }
+
+     .box15 {
+       display: flex;
+       align-items: center;
+       justify-content: space-around;
+       height: 100%;
+       grid-area: box15;
+       background-color: black;
+     }
+
+     .box16 {
+       position:relative;
+       max-width:100%;
+       background: url('../images/Монтажная область 21 1.svg');
+       grid-area: box16;
+       overflow: hidden;
+       white-space: nowrap;
+       background-size: cover;
+     }
+     .container6 {
+       position: relative;
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       grid-template-rows: 1fr
+       grid-auto-flow: row;
+       grid-template-areas:
+         ".";
+     }
+     .im1{
+       position: absolute;
+       left:20vw;
+       top:8vw;
+       width: 60vw;
+       height: 50vw;
+       animation: im1 1s linear infinite;
+     }
+
+     @keyframes im1 {
+       0% {left:20vw; width: 60vw; height: 50vw;}
+       30% {left:0vw; width: 60vw; height: 50vw;}
+       60% {left:20vw; width: 60vw; height: 50vw;}
+       80%{left:40vw; width: 60vw; height: 50vw;}
+       100% {left:20vw; width: 60vw; height: 50vw;}
+     }
+     .im2{
+        width: 70%;
+        height: 70%;
+     }
+
+     .im3{
+       width: 100%;
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+          object-fit: cover;
+     }
+     .im4{
+       width: 100%;
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+          object-fit: cover;
+     }
+     .eyes3{
+    position: relative;
+    display:flex;
+       width: 100%;
+       height: 100%;
+       align-items: flex-end;
+      justify-content: center;
+        /* vertical-align: center;
+        object-fit: cover; */
+     }
+  .im5{
+    /* height:21.5vw; */
+  }
+  .im5.1{
+    height:21.5vw;
+  }
+  .ball{
+    position: absolute;
+    weight:50%;
+  }
+  .im5.2{
+    /* height:21.5vw; */
+  }
+
+     .im6{
+       width: 100%;
+        height: 100%;
+
+        object-fit: cover;
+     }
+     .im7{
+       position:absolute;
+       width: 100%;
+        height: 100%;
+
+
+        animation: im7 3s linear infinite;
+     }
+
+     @keyframes im7 {
+      0% {left:0vw;}
+      50%{left:10vw;}
+      100% {left:0vw;}
+     }
+     .im8{
+       position: relative;
+       width: 100%;
+        height: 100%;
+        object-fit: cover;
+     }
+
+     .im9{
+       width: 10vw;
+       height: %;
+        display: inline-block;
+        object-fit: cover;
+        animation:im9 .3s infinite;
+     }
+
+     @keyframes im9 {
+       0%{opacity:100%;}
+       50%{opacity:0%;}
+       100%{opacity:100%;}
+     }
+     .im10{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        animation: im10 2s infinite;
+     }
+     @keyframes im10 {
+       35%{transform: rotate(20deg);}
+       70%{transform: rotate(-20deg);}
+
+     }
+
+
+     .im11{
+       display: grid;
+       width: 100%;
+        height: 100%;
+        align-items: center;
+        object-fit: cover;
+     }
+     .t3{
+       position: absolute;
+       color: #FF029C;
+       font-family:Pomidor;
+       font-size: 5vw;
+       top:7vw;
+       left: 5vw;
+       animation:im9 .3s infinite;
+    }
+
+    @keyframes im9 {
+      0%{opacity:100%;}
+      50%{opacity:0%;}
+      100%{opacity:100%;}
+
+     }
+
+     .im12{
+       display: grid;
+       width: 100%;
+        height: 100%;
+        align-items: center;
+        object-fit: cover;
+     }
+     .im12{
+       animation: im12 4s infinite;
+     }
+     .im13{
+       width: 80%;
+        height: 80%;
+        position: absolute;
+
+      }
+      .im13{
+        animation: im13 4s infinite;
+      }
+  @keyframes im13 {
+          0%{left:0;}
+          50%{left: -50vw;}
+          100%{left:0;}
+
+
+     }
+     .im14{
+       width: 100%;
+        position: relative;
+        display: inline-block;
+        align-items: center;
+          object-fit: cover;
+     }
+       .im15{
+         width: 100%;
+          height: 100%;
+          position: relative;
+          display: inline-block;
+          vertical-align: top;
+       }
+       .im17{
+          height: 70%;
+          position: absolute;
+          vertical-align: center;
+       }
+       .im17{
+         animation: im17 5s infinite;
+       }
+       @-webkit-keyframes im17 {
+      50% {opacity: 0;}
+  }
+  .im16{
+    width: 100%;
+    position: absolute;
+    /* animation: im16 1s infinite; */
+    }
+
+  .im16:hover{
+    animation: im16 1s infinite;
+  }
+
+  @keyframes im16 {
+    0%{top:0;}
+    50%{top:-18vw;}
+    100%{top:0;}
+
+  }
+          .text{
+              width: 100%;
+              background: #FF029C;
+              padding: 20px;
+              -webkit-box-sizing: border-box;
+             }
+          }
 }
