--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width: 50px) and (max-device-width: 768px) and (orientation: portrait) {
+@media only screen and (min-device-width: 316px) and (max-device-width: 480px) and (orientation: portrait) {
   /* iPhone Portrait */
 .h1{
   font-size: 45vw;
@@ -152,25 +152,22 @@ height: 60vw;
         height: 65vw;
         background-color: black;
      }
-   .container2 {
-    display: grid;
-    position: relative;
-    grid-template-columns: 1fr 3fr 1fr 1fr;
-    grid-auto-rows: 1fr 1fr 1fr;
-    grid-template-areas:
-      "box7 box7 box7 box7 box8 box8"
-      "box9 box10 box10 box10 box8 box8"
-      "box9 box10 box10 box10 box8 box8";
-  }
+     .container2 {  display: grid;
+       grid-template-columns: 1fr 3fr 4fr;
+       grid-template-rows: 0.2fr 0.2fr ;
+       grid-template-areas:
+         "box7 box7 box7"
+         "box9 box10 box8";
+     }
 
   .box7 {
     position: relative;
-    grid-area: box7;
+     height: 20vw;
     background-color: black;
   }
   .box8 {
     position:relative;
-    max-width:100%;
+      height: 70vw;
       background-color: black;
     grid-area: box8;
   }
@@ -211,12 +208,12 @@ height: 60vw;
 
   }
   .box9 {
-  height: 75vw;
+  height: 70vw;
   }
 
   .box10 {
     position: relative;
-    max-width:100%;
+      height: 70vw;
      grid-area: box10;
      background: url('../images/Group 208.svg');
      background-color: black;
@@ -378,9 +375,7 @@ height: 60vw;
      }
      .im7{
        position:absolute;
-       width: 100%;
-        height: 100%;
-
+       height: 20vw;
 
         animation: im7 3s linear infinite;
      }
@@ -401,7 +396,7 @@ height: 60vw;
        width: 10vw;
        height: %;
         display: inline-block;
-        object-fit: cover;
+        padding-top:10vw;
         animation:im9 .3s infinite;
      }
 
@@ -521,4 +516,152 @@ height: 60vw;
               -webkit-box-sizing: border-box;
              }
           }
+}
+@media only screen and (min-device-width: 50px) and (max-device-width: 315px) and (orientation: portrait) {
+.h1{
+  font-size: 40vw;
+}
+.box2{
+  height: 64.9vw;
+}
+.container2 {  display: grid;
+  grid-template-columns: 1fr 3fr 4fr;
+  grid-template-rows: 0.2fr 0.2fr ;
+  grid-template-areas:
+    "box7 box7 box7"
+    "box9 box10 box8";
+}
+
+.box2 {
+   height: 60.026vw;
+  grid-area: box2; }
+
+.box7 {
+height: 25.026vw;
+   grid-area: box7; }
+
+.box10 {
+height: 75vw;
+   grid-area: box10; }
+.box14{
+  height: 30vw;
+}
+.box8 {
+height: 75vw;
+  grid-area: box8; }
+.im9{
+  height: 55vw;
+  padding-left: 1vw;
+  padding-top: 10vw;
+}
+.im7{
+  height: 25vw;
+}
+.box16{
+  height: 50vw;
+}
+@keyframes im7 {
+ 0% {left:0vw;}
+ 50%{left:5vw;}
+ 100% {left:0vw;}
+}
+.im8{
+  height:75vw;
+}
+.eyes{
+  height: 32vw;
+  top: 43vw;
+}
+.t3{
+  font-size:6vw;
+  top:8vw;
+}
+@keyframes eyes {
+  0%{opacity:100%;}
+  50%{opacity:0%;}
+  100%{opacity:100%;}
+}
+@keyframes t1 {
+  0% {top:7vw; left: 1vw;}
+  25% {top:4vw; left: 1vw;}
+  50% {top:7vw; left: 1vw;}
+  75% {top:8vw; left: 1vw;}
+  90% {top:7vw; left: 1vw;}
+}
+  .im9{
+    width: 10vw;
+
+     display: inline-block;
+     object-fit: cover;
+     animation:im9 .3s infinite;
+  }
+
+  }
+  .t1{
+    font-size: 6vw;
+  }
+  @keyframes im9 {
+    0%{opacity:100%;}
+    50%{opacity:0%;}
+    100%{opacity:100%;}
+  }
+  @-webkit-keyframes scroll {
+    0% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    100% {
+        -webkit-transform: translate(-100%, 0);
+        transform: translate(-100%, 0)
+    }
+  }
+
+  @-moz-keyframes scroll {
+    0% {
+        -moz-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    100% {
+        -moz-transform: translate(-100%, 0);
+        transform: translate(-100%, 0)
+    }
+  }
+
+  @keyframes scroll {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0)
+    }
+  }
+}
+}
+.container3 {
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr 1fr  ;
+  grid-template-rows: 1fr  ;
+  grid-template-areas:
+    "box11 box11 box11 box12 box12 "
+    "box11 box11 box11 box12 box12 "
+    "box11 box11 box11 box12 box12 ";
+}
+
+
+.box11 {
+  align-items: center;
+  justify-content: space-around;
+height: 60vw;
+   grid-area: box11;
+ }
+ .box12 {
+   align-items: center;
+   height: 60vw;
+   justify-content: space-around;
+    grid-area: box12;
+  }
+  .im11{
+    height: 60vw;
+  }
 }
